# minecraft_cpp

./: .gitignore  CMakeLists.txt
src/: game.cpp  game.h  main.cpp  shader.cpp  shader.h  window.cpp  window.h
src/util/: log.h  types.h
